# METAMINDS

./: .dockerignore  .gitignore  Dockerfile  README.md  __init__.py  client.py  deployment.md  inference.py  openenv.yaml  pyproject.toml  pytest.ini  requirements.txt  training.md
app/: __init__.py  env.py  graders.py  models.py  reward.py  server.py  tasks.py
baselines/: rule_based.py  run_baseline.py  run_trained_baseline.py  trained_policy.py
outputs/evals/: training_report.json
outputs/models/: er_triage_policy.joblib
scripts/: validate-submission.sh  validate_env.sh  validate_submission.py
server/: Dockerfile  __init__.py  app.py  er_triage_environment.py  requirements.txt
tests/: test_api.py  test_graders.py  test_models.py  test_supervised_policy.py  test_tasks.py  test_training_helpers.py
training/: __init__.py  er_triage_grpo.py  supervised_policy.py
